correct spacing in main header region

--- a/src/css/vocabulary-refactor.css
+++ b/src/css/vocabulary-refactor.css
@@ -229,6 +229,7 @@ main > header:before {
 
 main > header h1 {
     width: 100%;
+    margin-bottom: 0;
     grid: 0 / auto;
 
     font-family: 'Roboto Condensed';
@@ -255,6 +256,7 @@ main > header .categories {
 main > header .byline {
     display: block;
     width: 100%;
+    margin-top: 2em;
     margin-bottom: 2em;
 
     font-family: 'Source Sans Pro';
@@ -356,8 +358,6 @@ main > aside.sidebar .attention {
 main > aside.sidebar .attention a {
     --underline-background-color: var(--vocabulary-brand-color-soft-turquoise);
 }
-
-
 
 main h2 {
     width: 100%;
